WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24242
WebHTMLView's setCusor() uses the wrong point for elementAtPoint
https://bugs.webkit.org/show_bug.cgi?id=24242
Summary
WebHTMLView's setCusor() uses the wrong point for elementAtPoint
Simon Fraser (smfr)
Reported
2009-02-27 11:44:39 PST
setCusor() has this code: NSPoint localPoint = [htmlView convertPoint:point fromView:nil]; NSDictionary *dict = [htmlView elementAtPoint:point allowShadowContent:NO]; localPoint is never used.
Attachments
Patch, changelog
(2.16 KB, patch)
2009-02-27 11:56 PST
,
Simon Fraser (smfr)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-02-27 11:56:06 PST
Created
attachment 28094
[details]
Patch, changelog I don't know how to test this.
Anders Carlsson
Comment 2
2009-02-27 11:57:00 PST
Comment on
attachment 28094
[details]
Patch, changelog r=me
Simon Fraser (smfr)
Comment 3
2009-02-27 12:03:32 PST
http://trac.webkit.org/changeset/41293
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug