2009-02-27  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Anders Carlsson

        https://bugs.webkit.org/show_bug.cgi?id=24242

        setCursor(), and resetCursorRects() on Tiger, were using global, not local
        coordinates for elementAtPoint:

        * WebView/WebHTMLView.mm:
        (resetCursorRects):
        (setCursor):

Canonical link: https://commits.webkit.org/33365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41293 268f45cc-cd09-0410-ab3c-d52691b4dbfc